--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,40 +1,36 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "commonjs",
-    "lib": ["ES2022"],
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "strict": true,
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
+    "allowJs": true,
+    "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
-    "removeComments": false,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
     "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true,
-    "moduleResolution": "node",
-    "baseUrl": "./src",
+    "declaration": true,
+    "outDir": "dist",
+    "rootDir": ".",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"],
-      "@agents/*": ["./agents/*"],
-      "@types/*": ["./types/*"],
-      "@coordination/*": ["./coordination/*"],
-      "@security/*": ["./security/*"],
-      "@performance/*": ["./performance/*"]
+      "@/*": ["./src/*"],
+      "@/agents/*": ["./agents/*"]
     }
   },
   "include": [
     "src/**/*",
-    "tests/**/*"
+    "agents/**/*",
+    "demo.ts",
+    "*.ts"
   ],
   "exclude": [
     "node_modules",
     "dist",
-    "coverage"
-  ]
+    "tests"
+  ],
+  "ts-node": {
+    "esm": true
+  }
 }
